fixed network status aligment on mobile

--- a/_sass/screen.scss
+++ b/_sass/screen.scss
@@ -4654,7 +4654,7 @@ br.big {
         width: 70px;
     }
     .statusmenu {
-        margin-right: 120px;
+        margin-right: 90px;
     }
     .toc-row {
         -webkit-box-orient: vertical;
